[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Title Screen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Logo/logo frame 2.png" type="Texture" id=2]
[ext_resource path="res://Fonte/DTM-Sans.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Interface/botao-export.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Logo/logo frame 1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Interface/botao-hover.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Logo/logo-no-background.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 27
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 3 )

[node name="Title Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
script = ExtResource( 1 )

[node name="Logo" type="Node2D" parent="."]
position = Vector2( 176, 80 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Logo"]
position = Vector2( 7.99998, -66 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="OvoButton" type="TextureButton" parent="Logo/AnimatedSprite"]
margin_left = -126.0
margin_top = -26.0
margin_right = 126.0
margin_bottom = 26.0

[node name="Logo-no-background" type="Sprite" parent="Logo"]
position = Vector2( 8, 73 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 56.0
margin_top = 281.0
margin_right = 312.0
margin_bottom = 608.0

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 272.0
margin_right = 320.0
margin_bottom = 360.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 6 )

[node name="RichTextLabel" type="RichTextLabel" parent="StartButton"]
margin_left = 91.0
margin_top = 23.0
margin_right = 185.0
margin_bottom = 63.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = " JOGAR"

[node name="QuitButton" type="TextureButton" parent="."]
visible = false
margin_left = 48.0
margin_top = 504.0
margin_right = 320.0
margin_bottom = 592.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 6 )

[node name="RichTextLabel3" type="RichTextLabel" parent="QuitButton"]
margin_left = 98.0
margin_top = 25.0
margin_right = 177.0
margin_bottom = 65.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = " SAIR"

[node name="ControlsButton" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 393.0
margin_right = 320.0
margin_bottom = 481.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 6 )

[node name="RichTextLabel2" type="RichTextLabel" parent="ControlsButton"]
margin_left = 65.0
margin_top = 24.0
margin_right = 240.0
margin_bottom = 64.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = " CONTROLES"

[node name="GameVersion" type="RichTextLabel" parent="."]
margin_left = 289.0
margin_top = 616.0
margin_right = 383.0
margin_bottom = 656.0
mouse_filter = 2
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = " VER 0.2.1.3
"
scroll_active = false

[connection signal="pressed" from="Logo/AnimatedSprite/OvoButton" to="." method="_on_OvoButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_ControlsButton_pressed"]
